# PoS-NSB

./: .gitignore  LICENSE  README.md  _CoqProject  coq-pos-nsb.opam  dune  dune-project  meta.yml
.github/workflows/: coq-ci.yml
Model/: GlobalState.v  MessageTuple.v  Network.v  Schedule.v
Properties/: CG.v  CP.v  CQ.v  MemEq.v  SsrFacts.v  TreeChain.v
Protocol/: BlockTree.v  Blocks.v  LocalState.v  Messages.v  Parameters.v  Protocol.v  StateMonad.v
